// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetHistogramIndicatorAggregation should generate a aggregation for good events 1`] = `
Object {
  "_good": Object {
    "aggs": Object {
      "total": Object {
        "range": Object {
          "field": "latency",
          "keyed": true,
          "ranges": Array [
            Object {
              "from": 0,
              "key": "target",
              "to": 100,
            },
          ],
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_good>total['target']>_count",
      },
      "script": "params.value",
    },
  },
}
`;

exports[`GetHistogramIndicatorAggregation should generate a aggregation for total events 1`] = `
Object {
  "_total": Object {
    "aggs": Object {
      "total": Object {
        "value_count": Object {
          "field": "latency",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "totalEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "value": "_total>total",
      },
      "script": "params.value",
    },
  },
}
`;
